# adm

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: sorted_square.rs
c/: binary_search.c  counting_occurances.c  list  list.c
cpp/: array.cpp  circular_linked_list.cpp  doubly_linked_list.cpp  single_linked_list.cpp  single_linked_list_tail.cpp
js/: toptal_word.ts
programs/: 8-queens.c  annealing.c  backtrack.c  bfs-demo.c  bool.h  dfs-demo.c  editdistance.h  floyd.c  geotest.c  graph.h  kruskal.c  prim.c  primes.c  set_union.h  substringedit.c  sudoku.c  triangulate.c  war.c
programs/original/: findcycle.c  graph.c  permutations.c
proptest-regressions/: toptal_word.txt
python/: binary_search.py  binary_tree.py  count_occurences_sorted.py  toptal_word_creator.py
src/: binary_search.rs  binary_tree.rs  capital_letters.rs  div_by_4.rs  dna.rs  doubly.rs  find_max_consecutive_ones.rs  find_numbers.rs  graph.rs  integer_reversel.rs  kid_with_candies.rs  lib.rs  list.rs  quicksort.rs  running_sum.rs  shuffle.rs  single_num.rs  sorted_squares.rs  toptal_word.rs
src/binary_search/: mod.rs
src/counting_occurances/: mod.rs
src/duplicate_zeroes/: mod.rs
src/find_max_consecutive_ones/: find_max_consecutive_ones.md  mod.rs
src/find_numbers/: find_numbers.md  mod.rs
src/sorted_squares/: mod.rs  sorted_squares.md
