[package]
name = "adm"
version = "0.1.0"
authors = ["Usairim Isani <usairim.isani@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
criterion = "0.3.3"
log = "0.4"
termcolor = "1.1"
color-backtrace = "0.4"
ctor = "0.1.15"
pretty_env_logger = "0.4.0"

[dependencies.env_logger]
version = "0.7"
default-features = false
features = ["termcolor", "atty"]

[[bench]]
name = "sorted_square"
harness = false

[dev-dependencies]
proptest = "0.10.0"